--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         {
             "name": "kiukishenkaec",
             "email": "kiukishenkaec@gmail.com",
-            "homepage": "jw.org",
+            "homepage": "http://jw.org",
             "role": "Developer"
         }
     ],
