--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,10 @@
             "role": "Developer"
         }
     ],
+    "require": {
+    },
+    "require-dev": {
+    },
     "autoload": {
         "psr-4": {
             "kiukishenkaec\\adminpanel\\": "src"
